--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <type>javadoc</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.BambusDevs</groupId>
+            <artifactId>BungeecordReport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
