Adding MYSQL and TextComponents

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,10 @@
 # CC      OO   OO NN NN NN FFFFFF      III  GGG GGGG
 # CCC     OO   OO NN  NNNN FF          III  GGG  GGG
 #  CCCCC   OOOOO  NN   NNN FF         IIIII  GGGGGG
+BungeecordReport:
+  MYSQL:
+    Host: localhost
+    Port: 3306
+    Database:
+    User:
+    Password: 
