--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,6 @@
             <type>javadoc</type>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.BambusDevs</groupId>
-            <artifactId>BungeecordReport</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <properties>
@@ -78,6 +73,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
